--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
 </head>
 <body>
 
-<h1>ハートピア イベント計算ツール - V3</h1>
+<h1>ハートピア イベント計算ツール - V1.02a</h1>
 
 <!-- TOPページ / モード選択 -->
 <div id="topPage" class="card">
@@ -149,3 +149,4 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
 <script src="tool_V3.js"></script>
 </body>
 </html>
+
