--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
   </label>
 
   <label class="checkbox">
+    <input type="checkbox" id="goldAcorn_expert"> 金のドングリ会員
+  </label>
+
+  <label class="checkbox">
     <input type="checkbox" id="doublePrice_expert"> 倍額買取
   </label>
 
@@ -127,6 +131,10 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
   </label>
   
   <label class="checkbox">
+    <input type="checkbox" id="goldAcorn_piyo"> 金のドングリ会員
+  </label>
+
+  <label class="checkbox">
     <input type="checkbox" id="doublePrice_piyo"> 倍額買取
   </label>
 
@@ -149,4 +157,3 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
 <script src="tool_V3.js"></script>
 </body>
 </html>
-
