--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
   </div>
 </div>
 
-<script src="tool_V3.js"></script>
+<script src="tool_v1_02a.js"></script>
 </body>
 </html>
+
