--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ハートピア イベント計算ツール - V1.02a</title>
+<title>ハートピア イベント計算ツール - V1.02b</title>
 <style>
 body { font-family: sans-serif; background: #f7f7f7; padding:16px; max-width:600px; margin:auto; }
 .card { background:#fff; border-radius:8px; padding:16px; margin-bottom:16px; box-shadow:0 2px 6px rgba(0,0,0,0.1);}
@@ -29,7 +29,7 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
 </head>
 <body>
 
-<h1>ハートピア イベント計算ツール - V1.02a</h1>
+<h1>ハートピア イベント計算ツール - V1.02b</h1>
 
 <!-- TOPページ / モード選択 -->
 <div id="topPage" class="card">
@@ -37,8 +37,9 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
     <button id="btnExpertMode">玄人モード</button>
     <button id="btnPiyoMode">ぴよぴよモード</button>
   </div>
-  <h3>🆕 更新情報 26/02/10</h3>
+  <h3>🆕 更新情報 26/02/11 v1.03b</h3>
   <ul>
+    <li>一部、料理Lv9まで対応しました ※ネタバレ注意</li>
     <li>v1.02a 両モード対応！玄人／ぴよぴよ切替可能</li>
     <li>【販売価格】金のドングリ会員に対応しました</li>
     <li>登録・削除・更新ボタン押下時に確認ダイアログが出るようになりました</li>
@@ -46,6 +47,7 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
     <li>イベントアイテムの編集・削除機能を追加しました</li>
     <li>入力情報はブラウザを閉じてもリロード・モード切替でも保持されます</li>
   </ul>
+  <p>※注意　このツールは一部料理のネタバレがあります</p>
   <p>使い方：玄人モードは自由にアイテム登録・編集可能。ぴよぴよモードは選択式で簡単操作。</p>
   <p>何かあれば「あいすいずでっど」まで<a href="https://x.com/Ic4isdead"> 𝕏 [旧Twitter]</a></p>
 </div>
@@ -158,3 +160,4 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
 <script src="tool_v1_02a.js"></script>
 </body>
 </html>
+
