--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
   </div>
   <h3>🆕 更新情報 26/02/11 v1.03b</h3>
   <ul>
-    <li>一部、料理Lv9まで対応しました ※ネタバレ注意</li>
+    <li>一部、料理Lv9まで対応しました <font color="red">※ネタバレ注意</font></li>
     <li>v1.02a 両モード対応！玄人／ぴよぴよ切替可能</li>
     <li>【販売価格】金のドングリ会員に対応しました</li>
     <li>登録・削除・更新ボタン押下時に確認ダイアログが出るようになりました</li>
@@ -47,7 +47,7 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
     <li>イベントアイテムの編集・削除機能を追加しました</li>
     <li>入力情報はブラウザを閉じてもリロード・モード切替でも保持されます</li>
   </ul>
-  <p>※注意　このツールは一部料理のネタバレがあります</p>
+  <p><font color="red">※注意</font>　このツールは一部料理のネタバレがあります</p>
   <p>使い方：玄人モードは自由にアイテム登録・編集可能。ぴよぴよモードは選択式で簡単操作。</p>
   <p>何かあれば「あいすいずでっど」まで<a href="https://x.com/Ic4isdead"> 𝕏 [旧Twitter]</a></p>
 </div>
@@ -160,4 +160,5 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
 <script src="tool_v1_02a.js"></script>
 </body>
 </html>
+
 
