--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ハートピア イベント計算ツール - V1.02b</title>
+<title>ハートピア 計算ツール - V1.02b</title>
 <style>
 body { font-family: sans-serif; background: #f7f7f7; padding:16px; max-width:600px; margin:auto; }
 .card { background:#fff; border-radius:8px; padding:16px; margin-bottom:16px; box-shadow:0 2px 6px rgba(0,0,0,0.1);}
@@ -29,7 +29,7 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
 </head>
 <body>
 
-<h1>ハートピア イベント計算ツール - V1.02b</h1>
+<h1>ハートピア 計算ツール - V1.02b</h1>
 
 <!-- TOPページ / モード選択 -->
 <div id="topPage" class="card">
@@ -160,5 +160,6 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
 <script src="tool_v1_02a.js"></script>
 </body>
 </html>
+
 
 
