--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
   <label>残りイベント日数
     <input type="number" id="eventDays_expert" min="1">
   </label>
-  <label>稼ぎたいイベントコイン数
+  <label>稼ぎたいトークン / コイン数
     <input type="number" id="targetCoin_expert">
   </label>
-  <label>売りたいイベントアイテム
+  <label>売りたいアイテム
     <select id="itemSelect_expert"></select>
   </label>
   <label>売却価格（☆1基準）
@@ -120,10 +120,10 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
   <label>残りイベント日数
     <input type="number" id="eventDays_piyo" min="1">
   </label>
-  <label>稼ぎたいイベントコイン数
+  <label>稼ぎたいトークン / コイン数
     <input type="number" id="targetCoin_piyo">
   </label>
-  <label>売りたいイベントアイテム
+  <label>売りたいアイテム
     <select id="itemSelect_piyo"></select>
   </label>
   <label>売却価格（☆1基準）
@@ -160,6 +160,7 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
 <script src="tool_v1_02a.js"></script>
 </body>
 </html>
+
 
 
 
