--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
   </div>
 </div>
 
-<script src="tool_v1_02a.js"></script>
+<script src="tool_v1_02b.js"></script>
 </body>
 </html>
+
 
 
 
