--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ハートピア 計算ツール - V1.02b</title>
+<title>ハートピア 計算ツール - V1.03</title>
 <style>
 body { font-family: sans-serif; background: #f7f7f7; padding:16px; max-width:600px; margin:auto; }
 .card { background:#fff; border-radius:8px; padding:16px; margin-bottom:16px; box-shadow:0 2px 6px rgba(0,0,0,0.1);}
@@ -29,7 +29,7 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
 </head>
 <body>
 
-<h1>ハートピア 計算ツール - V1.02b</h1>
+<h1>ハートピア 計算ツール - V1.03</h1>
 
 <!-- TOPページ / モード選択 -->
 <div id="topPage" class="card">
@@ -37,7 +37,7 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
     <button id="btnExpertMode">玄人モード</button>
     <button id="btnPiyoMode">ぴよぴよモード</button>
   </div>
-  <h3>🆕 更新情報 26/02/11 v1.02b</h3>
+  <h3>🆕 更新情報 26/02/11 v1.03</h3>
   <ul>
     <li>一部、料理Lv9まで対応しました <font color="red">※ネタバレ注意</font></li>
     <li>【販売価格】☆２～☆５の表示に対応しました</li>
@@ -164,9 +164,10 @@ pre { background:#f3f3f3; padding:8px; border-radius:4px; white-space:pre-wrap; 
   </div>
 </div>
 
-<script src="tool_v1_02b.js"></script>
+<script src="tool_v1_03.js"></script>
 </body>
 </html>
+
 
 
 
